# Jevios_Test

./: CMakeLists.txt  README.md  faceDetection.cpp  faceTracer.c  jevois.ino  objectTracker.c  webcam_face_pose_ex.cpp
